add problems concepts

--- a/Documentation/bibliography.bib
+++ b/Documentation/bibliography.bib
@@ -35,4 +35,12 @@
   year = {2017}, 
   note = "[Online; accessed 16-Octubre-2017]"
 }
+
+@misc{gradient,
+    author    = "Wikipedia",
+    title     = "Gradiente",
+    howpublished = "\url{https://es.wikipedia.org/wiki/Gradiente}",
+  year = {2017}, 
+  note = "[Online; accessed 16-Octubre-2017]"
+}
  
